--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,27 +1,17 @@
-# .github/workflows/python-ci.yml
-
-name: Python CI
+name: CI Pipeline
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
+          python-version: "3.10"
+      - name: Install pytest
+        run: pip install pytest
       - name: Run tests
-        run: |
-          pytest
+        run: pytest
